# SETS

./: .SETS_settings.ini  DATA_INTEGRATION_SUMMARY.md  FUTURE_DATA_SOURCES.md  REFACTORING_SUMMARY.md  WIKI_SCRAPER_README.md  async_ships.json  comparison_results.json  main.py  pyproject.toml  raider_ships.json  tatus --porcelain  test_api_readonly.py  test_autosave.json  test_mediawiki_vs_scraping.py  test_placeholder_cache.py  test_sets_data_loading.py  test_wiki_scraper.py
.cursor/: rules
src/: __init__.py  api_data_loader.py  app.py  build_manager.py  buildupdater.py  callbacks.py  datafunctions.py  iofunc.py  mediawiki_api.py  placeholder_resolver.py  ship_data_manager.py  textedit.py  widgets.py  wiki_scraper.py
src/refactored/: __init__.py  app.py  cache_manager.py  data_loader.py  equipment_manager.py  stat_calculator.py
test_cache_api/api_data/: ships_all_Federation_all.json  ships_all_all_6.json
test_cache_readonly/api_data/: equipment_all_all.json
test_cache_sets_app/api_data/: ships_all_all_all.json
