[tool.poetry]
name = "SETS"
version = "0.1.0"
description = "A Star Trek Online build tool in Python"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Topic :: Games/Entertainment",
    "Development Status :: 4 - Beta"
]
packages = [{include = "src"}]
include = ["local", "LICENSE", "README.md"]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
PySide6 = "*"
requests = "*"
numpy = "*"
requests_html = "*"
lxml_html_clean = "*"
aiohttp = "*"

[tool.poetry.group.dev.dependencies]

[tool.poetry.scripts]
sets = "main:Launcher.launch"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.cxfreeze]
executables = [
    { script = "main.py", base = "gui", icon = "local/icon", target_name = "SETS" }
]

[tool.cxfreeze.build_exe]
include_files = ["local", "LICENSE", "README.md"]
packages = ["PySide6", "requests", "numpy", "requests_html", "lxml_html_clean"]
optimize = 2
